[gd_scene load_steps=3 format=2]

[ext_resource path="res://Nodes/Misc/TriggerTimer.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 41.1947

[node name="TriggerTimer" type="Area2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_TriggerTimer_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_TriggerTimer_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_started" from="Tween" to="." method="_on_Tween_tween_started"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
